--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>cucumber-testng</artifactId>
             <version>7.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.java-json-tools</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>2.2.14</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
     <properties>
